--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 				<meta name="viewport" content="width=device-width, initial-scale=1">
 				<link rel="stylesheet" href="main.css">
 				<div class="navbar">
-					<a class="active" href="index.php">Home</a>
-					<a href="about.php">About</a>
+					<a class="active" href="index.html">Home</a>
+					<a href="about.html">About</a>
 					<a href="https://twitter.com/devvylul" target="_blank">Twitter</a>
 					<a href="https://github.com/DevvyiOS" target="_blank">GitHub</a>
 				</div>		
