--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
 					<img src="idev.jpg">
 					<h1>DevvyiOS Repo</h1>
 					<p>Click "Copy" to copy my repo.</p>
-					<a href="index.php">Copy</a>
+					<a href="index.html">Copy</a>
 				</div>
 				
 				<div class="card">
 					<img src="idev.jpg">
 					<h1>DevvyiOS Repo</h1>
 					<p>Click "Copy" to copy my repo.</p>
-					<a href="index.php">Copy</a>
+					<a href="index.html">Copy</a>
 				</div>
 				
 				<div class="card">
 					<img src="idev.jpg">
 					<h1>DevvyiOS Repo</h1>
 					<p>Click "Copy" to copy my repo.</p>
-					<a href="index.php">Copy</a>
+					<a href="index.html">Copy</a>
 				</div>
 			<center>
 		</body>
