--- a/index.html
+++ b/index.html
@@ -14,21 +14,21 @@
 			</head>
 			<center>
 				<div class="card">
-					<img src="idev.jpg">
+					<img src="idev.png">
 					<h1>DevvyiOS Repo</h1>
 					<p>Click "Copy" to copy my repo.</p>
 					<a href="index.html">Copy</a>
 				</div>
 				
 				<div class="card">
-					<img src="idev.jpg">
+					<img src="idev.png">
 					<h1>DevvyiOS Repo</h1>
 					<p>Click "Copy" to copy my repo.</p>
 					<a href="index.html">Copy</a>
 				</div>
 				
 				<div class="card">
-					<img src="idev.jpg">
+					<img src="idev.png">
 					<h1>DevvyiOS Repo</h1>
 					<p>Click "Copy" to copy my repo.</p>
 					<a href="index.html">Copy</a>
