--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 			</head>
 			<center>
 				<div class="textcard">
-					<img src="idev.png>
+					<img src="idev.png">
 					<h1>About Devvy</h1>
 					<p>I am a 17 year old developer learning to be a security researcher.</p>
 				</div>
