--- a/index.html
+++ b/index.html
@@ -13,25 +13,29 @@
 				</div>		
 			</head>
 			<center>
+				<h1>My Projects</h1>
 				<div class="card">
 					<img src="idev.png">
-					<h1>DevvyiOS Repo</h1>
-					<p>Click "Copy" to copy my repo.</p>
-					<a href="index.html">Copy</a>
+					<div class="line">
+					<h1>Devvy Cord</h1>
+					<p>Click "Join" to join my discord server!</p>
+					<a href="index.html">Join</a>
 				</div>
 				
 				<div class="card">
 					<img src="idev.png">
-					<h1>DevvyiOS Repo</h1>
-					<p>Click "Copy" to copy my repo.</p>
-					<a href="index.html">Copy</a>
+					<div class="line">
+					<h1>Devvy Cord</h1>
+					<p>Click "Join" to join my discord server!</p>
+					<a href="index.html">Join</a>
 				</div>
 				
 				<div class="card">
 					<img src="idev.png">
-					<h1>DevvyiOS Repo</h1>
-					<p>Click "Copy" to copy my repo.</p>
-					<a href="index.html">Copy</a>
+					<div class="line">
+					<h1>Devvy Cord</h1>
+					<p>Click "Join" to join my discord server!</p>
+					<a href="index.html">Join</a>
 				</div>
 			<center>
 		</body>
