--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 					<a href="https://github.com/DevvyiOS" target="_blank">GitHub</a>
 				</div>		
 			</head>
-			<h1>My Projects</h1>
+			<div class="title">
+				<h1>My Projects</h1>
+			</div>
 			<center>
 				<div class="card">
 					<img src="idev.png">
