--- a/index.html
+++ b/index.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 	<html>
-		<body>
-			<head>
-				<title>Devvy Store</title>
-				<meta name="viewport" content="width=device-width, initial-scale=1">
-				<link rel="stylesheet" href="main.css">
+		<head>
+			<title>Devvy Store</title>
+			<meta name="viewport" content="width=device-width, initial-scale=1">
+			<link rel="stylesheet" href="main.css">
 				
-				<div class="header">
-					<h1>Devvy Store</h1>
-				</div>	
-			</head>
+			<div class="title">
+				<h1>Devvy Store</h1>
+			</div>	
+		</head>
+		<body>
+			<div class="content">
+				<a class="card" href="packages.html"></a>
+				<a class="card" href="packages.html"></a>
+				<a class="card" href="packages.html"></a>
+				<a class="card" href="packages.html"></a>
+				<a class="card" href="packages.html"></a>
+				<a class="card" href="packages.html"></a>
+			</div>	
 			<center>
 				<div class="navbar">
 					<a class="tab active" href="index.html">house_fill</a>
 					<a class="tab" href="packages.html">cube_box_fill</a>
 					<a class="tab" href="search.html">search</a>
 					<a class="tab" href="settings.html">gear_alt_fill</a>										 
-				</div>
-			</center>
+			</div>
+		</center>
 		</body>
 	</html>
