--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		<head>
 			<title>Devvy Store</title>
 			<meta name="viewport" content="width=device-width, initial-scale=1">
-			<link rel="stylesheet" href="main.css">
+			<link rel="stylesheet" href="css/main.css">
 				
 			<h1 class="maintitle">Devvy Store</h1>
 		</head>
